4 Implement creating building object

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -85,3 +85,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
++PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAttackAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
++PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
