--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -90,3 +90,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAttackAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
++PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.BlockMaterialPairs",NewName="/Script/TryToSurvive.TTS_BuildingComponent.BuildingMaterialPairs")
