--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -91,3 +91,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAttackAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.BlockMaterialPairs",NewName="/Script/TryToSurvive.TTS_BuildingComponent.BuildingMaterialPairs")
++PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.Rotate",NewName="/Script/TryToSurvive.TryToSurviveCharacter.RotateAction")
