4 - Reorganize BuildingActorBase class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,3 +92,6 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.BuildAction",NewName="/Script/TryToSurvive.TryToSurviveCharacter.HitAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.BlockMaterialPairs",NewName="/Script/TryToSurvive.TTS_BuildingComponent.BuildingMaterialPairs")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.Rotate",NewName="/Script/TryToSurvive.TryToSurviveCharacter.RotateAction")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.BuildingItem",NewName="/Script/TryToSurvive.BuildingActorBase.BuildingItemSubclass")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Preview",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterial")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Base",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterial")
