4 - Set up materials

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,5 +93,8 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.BlockMaterialPairs",NewName="/Script/TryToSurvive.TTS_BuildingComponent.BuildingMaterialPairs")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TryToSurviveCharacter.Rotate",NewName="/Script/TryToSurvive.TryToSurviveCharacter.RotateAction")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.BuildingItem",NewName="/Script/TryToSurvive.BuildingActorBase.BuildingItemSubclass")
-+PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Preview",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterial")
-+PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Base",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterial")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Preview",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterials")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.Base",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterials")
++PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.CurrentMaterial",NewName="/Script/TryToSurvive.TTS_BuildingComponent.CurrentMaterials")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterials")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.BaseMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterials")
