4 - Implement processing if Building is overlapped

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -98,3 +98,4 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.TTS_BuildingComponent.CurrentMaterial",NewName="/Script/TryToSurvive.TTS_BuildingComponent.CurrentMaterials")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterials")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.BaseMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterials")
++ClassRedirects=(OldName="/Script/TryToSurvive.BuildingComponent",NewName="/Script/TryToSurvive.BuildingComponent")
