13 - Implement building menu

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -99,3 +99,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.PreviewMaterials")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingActorBase.BaseMaterial",NewName="/Script/TryToSurvive.BuildingActorBase.BaseMaterials")
 +ClassRedirects=(OldName="/Script/TryToSurvive.BuildingComponent",NewName="/Script/TryToSurvive.BuildingComponent")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.CurrentItem",NewName="/Script/TryToSurvive.BuildingMenu.SelectedItem")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.VerticalBox",NewName="/Script/TryToSurvive.BuildingMenu.ButtonsVerticalBox")
