15 Implement Gate and Platform buildings, reorganize building system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -101,3 +101,4 @@ ManualIPAddress=
 +ClassRedirects=(OldName="/Script/TryToSurvive.BuildingComponent",NewName="/Script/TryToSurvive.BuildingComponent")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.CurrentItem",NewName="/Script/TryToSurvive.BuildingMenu.SelectedItem")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.VerticalBox",NewName="/Script/TryToSurvive.BuildingMenu.ButtonsVerticalBox")
++PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingComponent.CurrentBuildItem",NewName="/Script/TryToSurvive.BuildingComponent.CurrentBuildingItem")
