18 - Create interaction component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -102,3 +102,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.CurrentItem",NewName="/Script/TryToSurvive.BuildingMenu.SelectedItem")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingMenu.VerticalBox",NewName="/Script/TryToSurvive.BuildingMenu.ButtonsVerticalBox")
 +PropertyRedirects=(OldName="/Script/TryToSurvive.BuildingComponent.CurrentBuildItem",NewName="/Script/TryToSurvive.BuildingComponent.CurrentBuildingItem")
++PropertyRedirects=(OldName="/Script/TryToSurvive.InteractionComponent.MaxBuildingDistance",NewName="/Script/TryToSurvive.InteractionComponent.MaxInteractiveDistance")
++PropertyRedirects=(OldName="/Script/TryToSurvive.InteractionComponent.CurrentInteractionActor",NewName="/Script/TryToSurvive.InteractionComponent.CurrentInteractiveActor")
